bug fix on ios

--- a/themes/hugo-coder-modified/assets/scss/newfiles/books_page.scss
+++ b/themes/hugo-coder-modified/assets/scss/newfiles/books_page.scss
@@ -59,6 +59,7 @@
   box-shadow: 0 10px 15px rgba(0,0,0,.4);
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
   transition: .4s ease;
 }
 .layer-bookcover{
